--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,38 +252,106 @@
 .s-title{
     font-family: proxima-nova, sans-serif;
     font-weight: 700;
-    font-size: 50px;
     color: white;
     text-shadow: 0 3px 0 black;
 }
-
+.s-texto{
+    font-family: proxima-nova, sans-serif;
+    color: white;
+    text-shadow: 0 3px 0 black;
+    font-size: 50px;
+}
 /* PÁGINA CUIDADOS */
 .cuidados-main{
     margin-top: 10rem;
 }
-
 .cuidados-main h1{
+    font-family: proxima-nova, sans-serif;
     font-size: 40px;
 }
+.cuidados-main h2{
+    font-family: proxima-nova, sans-serif;
+    font-size: 20px;
+    margin-top: 1.5rem;
+    margin-right: 6rem;
+}
+.txt-c{
+    font-family: proxima-nova, sans-serif;
+    text-align: justify;
+    margin-right: 100px;
+    font-size: 17px;
+}
 .cuidados-main hr{
-    background-color: black;
-    height: 6px;
+    background-color: var(--color-amarillo-general);
+    height: 4px;
     opacity: 1;
     border: none;
     width: 600px;
     border-radius: 1rem;
 }
-.cuidados-main p{
-    text-align: justify;
-    margin-right: 80px;
-}
-.cuidados-main img{
 
+.img-cuidados{
+    width: 290px;
+    height: auto;
+    border-radius: 0.1rem;
+    box-shadow: 0 0.1rem 0.5rem 0;
 }
 .imagen-texto{
     display: flex;
-    align-items: center;
 }
 .txt-derecha{
-    margin-left: 10px;
+    margin-left: 5px;
+}
+.custom-list {
+    list-style: none;
+}
+.custom-list li::before {
+    content: "";
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    background-image: url("../img/pata-gato.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin-right: 0.5rem;
+}
+
+/* PÁGINA RAZAS */
+.razas-main{
+    margin-top: 10rem;
+}
+.razas-main img{
+    height: 400px;
+    width: auto;
+    box-shadow: 0.1rem 0.1rem 1rem 0;
+    border-top: 8px solid var(--color-amarillo-general);
+}
+.espacio-r{
+    margin-left: 50px;
+}
+.fondo-r{
+        background-image:
+                linear-gradient(to bottom, rgba(255, 255, 255, 0.90), rgba(255, 255, 255, 0.93)),
+                url('../img/fondo-patas.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+}
+.razas-main h1 {
+    font-size: 50px;
+    text-decoration: underline var(--color-amarillo-general);
+    text-decoration-thickness: 2px;
+    text-underline-offset: 1px;
+    font-family: proxima-nova, sans-serif;
+}
+.razas-main h2{
+    font-size: 30px;
+    font-family: proxima-nova, sans-serif;
+}
+.razas-main p{
+    font-size: 19px;
+    font-family: proxima-nova, sans-serif;
+    color: black;
+    text-align: justify;
+    word-spacing: 3px;
 }
