--- a/assets/css/mediaquery/xxl-style.css
+++ b/assets/css/mediaquery/xxl-style.css
@@ -9,20 +9,19 @@
 .txt-c{
     font-size: 21px;
 }
+    .cuidados img{
+        height: 300px;
+        margin-left: 90px;
+    }
 /* RAZAS */
 .razas-main p{
     font-size: 20px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
+/* CUIDADOS */
+.txt-c2{
+    font-size: 20px;
+}
+.txt-derecha{
+    font-size: 16px;
+}
 }
